fix: general fixes and locale

--- a/packages/app/src/locales/en.json
+++ b/packages/app/src/locales/en.json
@@ -357,8 +357,8 @@
         "transactionTable": {
             "error": "Something went wrong",
             "notFound": {
-                "title": "This smart contract doesn’t have any transactions",
-                "subtitle": "We can’t find any transaction related to this smart-contract. It’s your chance to be the first"
+                "title": "This smart contract doesn't have any transactions",
+                "subtitle": "We can't find any transaction related to this smart-contract. It's your chance to be the first"
             }
         },
         "balances": {
@@ -367,8 +367,8 @@
                 "subtitle": "Something went wrong.\nPlease return to this page in a minute."
             },
             "notFound": {
-                "title": "This smart contract doesn’t have any balances",
-                "subtitle": "We can’t find any balances related to this smart-contract."
+                "title": "This smart contract doesn't have any balances",
+                "subtitle": "We can't find any balances related to this smart-contract."
             }
         },
         "table": {
@@ -562,7 +562,7 @@
             "buttonVerify": "Verify Smart Contract",
             "buttonVerifying": "Verifying...",
             "buttonClear": "Clear",
-            "unknownError": "Unsuccessful contract verification! We can’t verify your contract based on your information, please check it",
+            "unknownError": "Unsuccessful contract verification! We can't verify your contract based on your information, please check it",
             "flattenerInfo": {
                 "title": "If your contract uses \"imports\", you will need to concatenate the code into one file ( otherwise known as \"flattening\" ). For that purpose you can use {flattener} or {flattery}",
                 "solidityFlattener": "solidity-flattener",
@@ -576,7 +576,7 @@
         },
         "verified": {
             "title": "Contract verified!",
-            "underline": "Anyone on {link} could check it’s code and interact with it",
+            "underline": "Anyone on {link} could check it's code and interact with it",
             "blockExplorer": "block explorer",
             "back": "Back to Contract"
         },
@@ -718,8 +718,8 @@
         "transactionTable": {
             "title": "Latest Transactions",
             "notFound": {
-                "title": "This account doesn’t have any transactions",
-                "subtitle": "We can’t find any transaction related to this account. It’s your chance to be the first"
+                "title": "This account doesn't have any transactions",
+                "subtitle": "We can't find any transaction related to this account. It's your chance to be the first"
             },
             "error": "Something went wrong"
         },
@@ -730,8 +730,8 @@
                 "subtitle": "Something went wrong.\nPlease return to this page in a minute."
             },
             "notFound": {
-                "title": "This account doesn’t have any balances",
-                "subtitle": "We can’t find any balances related to this account."
+                "title": "This account doesn't have any balances",
+                "subtitle": "We can't find any balances related to this account."
             }
         }
     },
@@ -751,8 +751,8 @@
         "home": "Transactions, Blocks, Contracts and much more"
     },
     "notFound": {
-        "title": "Oops, we can’t find anything",
-        "description": "Sorry we can’t find anything on your search result, please try one more time via seach bar below",
+        "title": "Oops, we can't find anything",
+        "description": "Sorry we can't find anything on your search result, please try one more time via seach bar below",
         "contactSupportTitle": "If you think this is a problem with us, please",
         "contactSupport": "contact support"
     },
@@ -812,5 +812,15 @@
     },
     "pagination": {
         "records": "Records"
+    },
+    "walletInfoModal": {
+        "title": "Wallet",
+        "yourWalletTitle": "Your wallet",
+        "addressLabel": "Address",
+        "balanceLabel": "Balance",
+        "disconnectButton": "Disconnect",
+        "balanceUnavailable": "Balance unavailable",
+        "loadingBalance": "Loading balance...",
+        "noEthBalance": "ETH balance not found"
     }
 }
