fix: add scheme for siweMessage

--- a/packages/app/src/locales/en.json
+++ b/packages/app/src/locales/en.json
@@ -822,5 +822,6 @@
         "balanceUnavailable": "Balance unavailable",
         "loadingBalance": "Loading balance...",
         "noEthBalance": "ETH balance not found"
-    }
+    },
+    "Login": "Login"
 }
