fix: failing tests
- packages/app/src/locales/en.json: Added the
  missing translation keys for error and revert
  reason fields
- packages/app/src/locales/uk.json: Added
  corresponding Ukrainian translations
- packages/app/tests/components/transactions/GeneralInfo.spec.ts:
  Updated the failing test to use the correct CSS
  selector

--- a/packages/app/src/locales/uk.json
+++ b/packages/app/src/locales/uk.json
@@ -75,6 +75,10 @@
             "statusTooltip": "Статус транзакції",
             "reason": "Причина",
             "reasonTooltip": "Причина невиконання транзакції",
+            "error": "Помилка",
+            "errorTooltip": "Повідомлення про помилку невдалої транзакції",
+            "revertReason": "Причина відкату",
+            "revertReasonTooltip": "Причина відкату невдалої транзакції",
             "transactionHash": "Хеш Транзакції",
             "nonce": "Нонс",
             "receivedAt": "Отримано",
@@ -199,13 +203,13 @@
             "error": "Щось пішло не так",
             "notFound": {
                 "title": "Цей смарт-контракт не має жодних транзакцій",
-                "subtitle": "Ми не можемо знайти жодних транзакцій, пов’язаних із цим смарт-контрактом. Це ваш шанс бути першим"
+                "subtitle": "Ми не можемо знайти жодних транзакцій, пов'язаних із цим смарт-контрактом. Це ваш шанс бути першим"
             }
         },
         "balances": {
             "notFound": {
                 "title": "Цей смарт-контракт не має жодних коштів",
-                "subtitle": "Ми не можемо знайти жодних коштів, пов’язаних із цим смарт-контрактом."
+                "subtitle": "Ми не можемо знайти жодних коштів, пов'язаних із цим смарт-контрактом."
             }
         },
         "table": {
@@ -438,14 +442,14 @@
             "title": "Останні транзакції",
             "notFound": {
                 "title": "Цей профіль не має жодних транзакцій",
-                "subtitle": "Ми не можемо знайти жодних транзакцій, пов’язаних із цим акаунтом. Це ваш шанс бути першим"
+                "subtitle": "Ми не можемо знайти жодних транзакцій, пов'язаних із цим акаунтом. Це ваш шанс бути першим"
             }
         },
         "balanceTableTitle": "Мої кошти",
         "balances": {
             "notFound": {
                 "title": "Цей профіль не має жодних коштів",
-                "subtitle": "Ми не можемо знайти жодних коштів, пов’язаних із цим акаунтом."
+                "subtitle": "Ми не можемо знайти жодних коштів, пов'язаних із цим акаунтом."
             }
         }
     },
