fix: error and revert reason columns
- renamed the "Reason" column to "Revert reason"
- added a new column for "Error"
- updated translation files

--- a/packages/app/src/locales/uk.json
+++ b/packages/app/src/locales/uk.json
@@ -73,10 +73,10 @@
         "table": {
             "status": "Статус",
             "statusTooltip": "Статус транзакції",
-            "reason": "Причина",
-            "reasonTooltip": "Причина невиконання транзакції",
+            "reason": "Причина відкату",
+            "reasonTooltip": "Причина відкату транзакції",
             "error": "Помилка",
-            "errorTooltip": "Повідомлення про помилку невдалої транзакції",
+            "errorTooltip": "Повідомлення про помилку транзакції",
             "revertReason": "Причина відкату",
             "revertReasonTooltip": "Причина відкату невдалої транзакції",
             "transactionHash": "Хеш Транзакції",
