--- a/packages/app/src/locales/en.json
+++ b/packages/app/src/locales/en.json
@@ -98,12 +98,10 @@
         "table": {
             "status": "Status",
             "statusTooltip": "The status of the transaction",
-            "reason": "Reason",
-            "reasonTooltip": "The failure reason of the transaction",
-            "error": "Error",
-            "errorTooltip": "The error message of the failed transaction",
             "revertReason": "Revert Reason",
-            "revertReasonTooltip": "The revert reason of the failed transaction",
+            "revertReasonTooltip": "The revert reason of the transaction",
+            "error": "Error",
+            "errorTooltip": "The error message of the transaction",
             "txnHash": "Txn hash",
             "transactionHash": "Transaction Hash",
             "transactionHashTooltip": "Transaction hash is a unique 66-character identifier that is generated whenever a transaction is executed",
