feat: add error message to revert reason (#466)
# What ❔

- Modified the transaction reason display logic in
packages/app/src/components/transactions/infoTable/GeneralInfo.vue to
show error message and revert reason message when the transaction is
reverted.
- Added CSS styling to ensure proper spacing between the error and
revert reason messages when both are displayed.

- Can test on Era mainnet tx:
`0x51640769e14c9b8ac7270a3deaf1fbb8f0c5c663c3c967527cd484539461c191`
## Why ❔

Shows revert reason and error message on block explorer frontend for
easier debugging. Resolves
https://github.com/matter-labs/block-explorer/issues/406

## Checklist

<!-- Check your PR fulfills the following items. -->
<!-- For draft PRs check the boxes as you complete them. -->

- [ ] PR title corresponds to the body of PR (we generate changelog
entries from PRs).
- [ ] Tests for the changes have been added / updated.
- [ ] Documentation comments have been added / updated.

--- a/packages/app/src/locales/en.json
+++ b/packages/app/src/locales/en.json
@@ -98,8 +98,10 @@
         "table": {
             "status": "Status",
             "statusTooltip": "The status of the transaction",
-            "reason": "Reason",
-            "reasonTooltip": "The failure reason of the transaction",
+            "reason": "Revert Reason",
+            "reasonTooltip": "The revert reason of the transaction",
+            "error": "Error",
+            "errorTooltip": "The error message of the transaction",
             "txnHash": "Txn hash",
             "transactionHash": "Transaction Hash",
             "transactionHashTooltip": "Transaction hash is a unique 66-character identifier that is generated whenever a transaction is executed",
@@ -358,7 +360,7 @@
             "error": "Something went wrong",
             "notFound": {
                 "title": "This smart contract doesn’t have any transactions",
-                "subtitle": "We can’t find any transaction related to this smart-contract. It’s your chance to be the first"
+                "subtitle": "We can’t find any transaction related to this smart-contract. It's your chance to be the first"
             }
         },
         "balances": {
@@ -752,7 +754,7 @@
     },
     "notFound": {
         "title": "Oops, we can’t find anything",
-        "description": "Sorry we can’t find anything on your search result, please try one more time via seach bar below",
+        "description": "Sorry we can’t find anything on your search result, please try one more time via search bar below",
         "contactSupportTitle": "If you think this is a problem with us, please",
         "contactSupport": "contact support"
     },
