--- a/packages/app/src/locales/en.json
+++ b/packages/app/src/locales/en.json
@@ -1,6 +1,6 @@
 {
     "general": {
-        "l2NetworkName": "ZKsync Era",
+        "l2NetworkName": "ZKsync",
         "l1NetworkName": "Ethereum"
     },
     "copyButton": {
@@ -15,7 +15,7 @@
     "networkStats": {
         "title": "Network Stats",
         "subtitleTestnet": "Stats are occasionally reset on testnet.",
-        "subtitleMainnet": "ZKsync Era Mainnet is open to everyone.",
+        "subtitleMainnet": "{l2NetworkName} is open to everyone.",
         "committed": "Committed Blocks",
         "verified": "Verified Blocks",
         "transactions": "Transactions",
@@ -314,8 +314,8 @@
         "subtitle": "zkRollups significantly cheaper than L1 or Optimistic Rollups"
     },
     "blockExplorer": {
-        "title": "ZKsync Era Block Explorer",
-        "subtitle": "ZKsync Era Block Explorer provides all the information to deep dive into transactions, blocks, contracts, and much more. Deep dive into ZKsync Era and explore the network.",
+        "title": "ZKsync Block Explorer",
+        "subtitle": "ZKsync Block Explorer provides all the information to deep dive into transactions, blocks, contracts, and much more. Deep dive into ZKsync and explore the network.",
         "latestBlocks": "Latest Blocks",
         "latestTransactions": "Latest Transactions",
         "batches": "Latest Batches"
@@ -655,11 +655,11 @@
             "tokenAddress": "Token Address",
             "bridged": {
                 "title": "Bridged",
-                "tooltip": "This token is bridged from L1 to ZKsync Era"
+                "tooltip": "This token is bridged from L1 to ZKsync"
             },
             "native": {
                 "title": "L2-native",
-                "tooltip": "This token is native to ZKsync Era"
+                "tooltip": "This token is native to ZKsync"
             },
             "tokenAddressL2": "L2 Token address",
             "tokenAddressL1": "L1 Token address"
@@ -749,7 +749,7 @@
         }
     },
     "document": {
-        "title": "ZKsync Era Block Explorer",
+        "title": "ZKsync Block Explorer",
         "home": "Transactions, Blocks, Contracts and much more"
     },
     "notFound": {
