feat: support dynamic settlement layer chain id

--- a/packages/app/src/locales/en.json
+++ b/packages/app/src/locales/en.json
@@ -1,7 +1,6 @@
 {
     "general": {
-        "l2NetworkName": "ZKsync",
-        "l1NetworkName": "Ethereum"
+        "l2NetworkName": "ZKsync"
     },
     "copyButton": {
         "tooltip": "Copied!"
