--- a/packages/app/src/locales/en.json
+++ b/packages/app/src/locales/en.json
@@ -72,12 +72,12 @@
         "transactionTable": {
             "title": "Block Transactions",
             "showMore": "Show more transactions ->",
-            "noTransactions": "This Block doesn't have any transactions",
+            "noTransactions": "This Block doesn’t have any transactions",
             "blockNotFound": "This Block has not been created or sealed yet"
         }
     },
     "transfers": {
-        "notFound": "Address doesn't have any transfers at this moment",
+        "notFound": "Address doesn’t have any transfers at this moment",
         "table": {
             "transactionHash": "Txn hash",
             "age": "Age",
@@ -263,7 +263,7 @@
         "transactionTable": {
             "title": "Batch Transactions",
             "error": "Something went wrong",
-            "noTransactions": "This Batch doesn't have any transactions",
+            "noTransactions": "This Batch doesn’t have any transactions",
             "batchNotFound": "This Batch has not been created or sealed yet"
         },
         "table": {
@@ -359,8 +359,8 @@
         "transactionTable": {
             "error": "Something went wrong",
             "notFound": {
-                "title": "This smart contract doesn't have any transactions",
-                "subtitle": "We can't find any transaction related to this smart-contract. It's your chance to be the first"
+                "title": "This smart contract doesn’t have any transactions",
+                "subtitle": "We can’t find any transaction related to this smart-contract. It's your chance to be the first"
             }
         },
         "balances": {
@@ -369,8 +369,8 @@
                 "subtitle": "Something went wrong.\nPlease return to this page in a minute."
             },
             "notFound": {
-                "title": "This smart contract doesn't have any balances",
-                "subtitle": "We can't find any balances related to this smart-contract."
+                "title": "This smart contract doesn’t have any balances",
+                "subtitle": "We can’t find any balances related to this smart-contract."
             }
         },
         "table": {
@@ -400,7 +400,7 @@
             "txnHash": "txn hash",
             "method": "method",
             "logs": "logs",
-            "notFound": "Smart Contract doesn't have any events at this moment",
+            "notFound": "Smart Contract doesn’t have any events at this moment",
             "value": "value",
             "showMore": "Show More",
             "hide": "Hide"
@@ -564,7 +564,7 @@
             "buttonVerify": "Verify Smart Contract",
             "buttonVerifying": "Verifying...",
             "buttonClear": "Clear",
-            "unknownError": "Unsuccessful contract verification! We can't verify your contract based on your information, please check it",
+            "unknownError": "Unsuccessful contract verification! We can’t verify your contract based on your information, please check it",
             "flattenerInfo": {
                 "title": "If your contract uses \"imports\", you will need to concatenate the code into one file ( otherwise known as \"flattening\" ). For that purpose you can use {flattener} or {flattery}",
                 "solidityFlattener": "solidity-flattener",
@@ -666,7 +666,7 @@
         }
     },
     "tokenHolders": {
-        "notFound": "Token doesn't have any holders at this moment",
+        "notFound": "Token doesn’t have any holders at this moment",
         "table": {
             "address": "Address",
             "balance": "Quantity",
@@ -720,8 +720,8 @@
         "transactionTable": {
             "title": "Latest Transactions",
             "notFound": {
-                "title": "This account doesn't have any transactions",
-                "subtitle": "We can't find any transaction related to this account. It's your chance to be the first"
+                "title": "This account doesn’t have any transactions",
+                "subtitle": "We can’t find any transaction related to this account. It's your chance to be the first"
             },
             "error": "Something went wrong"
         },
@@ -732,8 +732,8 @@
                 "subtitle": "Something went wrong.\nPlease return to this page in a minute."
             },
             "notFound": {
-                "title": "This account doesn't have any balances",
-                "subtitle": "We can't find any balances related to this account."
+                "title": "This account doesn’t have any balances",
+                "subtitle": "We can’t find any balances related to this account."
             }
         }
     },
@@ -753,8 +753,8 @@
         "home": "Transactions, Blocks, Contracts and much more"
     },
     "notFound": {
-        "title": "Oops, we can't find anything",
-        "description": "Sorry we can't find anything on your search result, please try one more time via search bar below",
+        "title": "Oops, we can’t find anything",
+        "description": "Sorry we can’t find anything on your search result, please try one more time via search bar below",
         "contactSupportTitle": "If you think this is a problem with us, please",
         "contactSupport": "contact support"
     },
